resources/sass/field.scss
:root {
  --popper-theme-background-color: rgba(var(--colors-primary-500));
  --popper-theme-background-color-hover: rgba(var(--colors-primary-500));
  --popper-theme-border-width: 0px;
  --popper-theme-border-style: solid;
  --popper-theme-border-radius: 6px;
  --popper-theme-padding: 6px;
}

.popper {
  --tw-text-opacity: 1;
  color: rgba(var(--colors-white),var(--tw-text-opacity)) !important;
  font-size: .7rem;
  font-weight: 700;
  
  @media (prefers-color-scheme: dark) {
    --tw-text-opacity: 1;
    color: rgba(var(--colors-gray-800),var(--tw-text-opacity)) !important;
  }
}

.field {
  height: 24px;
  display: flex;
  align-items: center;
}

